# ilyuhin_bot

./: .env.sample  pyproject.toml
api/: my_web_server.py
tg-bot/: bot-start.py  config.py
webapp/: index.html  scripts.js  style.css
